new update has been completed

--- a/index.html
+++ b/index.html
@@ -22,12 +22,19 @@
 
   <main>
     <!-- Hero Section -->
-    <section id="hero" class="hero">
+    <!-- <section id="hero" class="hero">
       <div class="container text-center">
         <h1>Start Your Remote Internship Journey</h1>
         <p>Learn & earn with flexible, skill-building internships.</p>
         <a href="#" class="btn-primary">Apply Now</a>
       </div>
+    </section> -->
+    <section class="hero" id="home">
+        <div class="hero-content">
+            <h1>Join Our Remote Internship Program!</h1>
+            <p>Learn by working on real projects with industry professionals from anywhere in the world.</p>
+            <a href="#" class="btn-primary">Apply Now</a>
+        </div>
     </section>
 
     <!-- Benefits Section -->
